<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rate Instructor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="title_activity_detail_view">DetailViewActivity</string>
    <string name="d_office">Office:</string>
    <string name="d_phone">Phone:</string>
    <string name="d_email">Email:</string>
    <string name="d_rating">RATINGS</string>
    <string name="d_average">Average:</string>
    <string name="d_total">Total Ratings:</string>
    <string name="d_comment">COMMENTS</string>
    <string name="add_comment">Write</string>
    <string name="add_rating">Rate</string>

</resources>
